<resources>
    <string name="app_name">BlogApp</string>
    <string name="Email" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="Login">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Post">POST</string>
    <string name="date">Date</string>
</resources>
